# ccv

./: pyproject.toml
ccv/: __main__.py
ccv/apis/static/: base.py  main.py
ccv/apis/v1/: base.py  common.py  short.py
ccv/libs/: settings.py  setup_app.py
ccv/templates/: main.html
ccv/templates/shared/: _base.html  _footer.html  _header.html
